--- a/Practica2/templates/login.html
+++ b/Practica2/templates/login.html
@@ -4,7 +4,7 @@
 
     <h2>Login</h2>
 
-    <form name="login" action={{ url_for('login') }} target="body" method="post" id="logForm">
+    <form name="login" action={{ url_for('login') }} method="post" id="logForm">
       <div class="mainContainer">
         <div class="verContainer">
 
