--- a/Practica2/templates/basket.html
+++ b/Practica2/templates/basket.html
@@ -5,15 +5,19 @@
     <ul class="result_list">
       {% for film in basket %}
         <li class="result_item">
-          <a href={{ url_for('detail', id=film['id']) }} class="list_a_item">
+          <div class="list_a_item">
             <img class="result_item_img" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
             <div class="basket_item">
-              <div class="result_item_title">{{film['title'] + ' - ' + film['price']|string + '$'}}</div>
+              <a href={{ url_for('detail', id=film['id']) }} class="result_item_title">{{film['title'] + ' - ' + film['price']|string + '$'}}</a>
               <div class="result_item_text">
                 {{ film['synopsis'] }}
               </div>
+              <h4>Quantity: </h4>
               <div class="quantityCont">
-              	<input class="quantTextBox" type="text" value={{film['quantity']}}>
+              	<form id="quantForm" name="formDet" action={{ url_for('change_quant', id=film['id']) }} onsubmit="send(); return false;">
+              		<input class="quantTextBox" type="text" id="quantity" name="quant" onkeyup='checkNumber();' value={{'' or film['quantity']}}>
+              		<span id='quantMessage'></span>
+              	</form>
               	<form action={{ url_for('decCount', id=film['id']) }}>
               		<input type="image" src={{ url_for('static', filename='images/minus.png') }} id="search_button" alt="The icon could not be shown.">
               	</form>
@@ -25,7 +29,7 @@
                 <input class="history_item_button" type="submit" value="Remove">
               </form>
             </div>
-          </a>
+          </div>
         </li>
       {% endfor %}
     </ul>
@@ -45,4 +49,36 @@
   {% else %}
   <h2>No items available</h2>
   {% endif %}
+  <script>
+  	var checkNumber = function(){
+  		var number = document.getElementById('quantity').value;
+  		var err = isNaN(number);
+  		if (number == ''){
+  			err = true;
+  		}
+  		if (err == false) {
+  			number = Number(number);
+  			if (number%1 != 0 || number < 0){
+  				err = true;
+  			} 
+  		}
+  		if (err == true){
+  			document.getElementById('quantMessage').style.color = 'red';
+			document.getElementById('quantMessage').innerHTML = 'Invalid quantity.';
+			return false;
+  		} else{
+  			document.getElementById('quantMessage').innerHTML = '';
+  			return true;
+  		}
+  	}
+  	var send = function(){
+  		var correct = false;
+  		correct = checkNumber();
+  		if (correct == false){
+  			return false;
+  		}else{
+  			document.getElementById('quantForm').submit();
+  		}
+  	}
+  </script>
 {% endblock %}
