Store the last logged users on a cookie, use AYAX to show the number of active users, allow users to add cash to their acounts, change users files

--- a/Practica2/static/css/styles.css
+++ b/Practica2/static/css/styles.css
@@ -626,7 +626,7 @@ h5{
 			align-items: center;
 		}
 
-		.quantTextBox{
+		.quantTextBox, .cashTextBox{
 			background: #FCFCFC;
 			border-radius: 5px;
 			box-shadow: #ABABAB 0px 0px 0px 1px	;
@@ -643,6 +643,10 @@ h5{
 			outline: none;
 			border: none;
 			width: 50px;
+		}
+
+		.cashTextBox{
+			width: 180px;
 		}
 
 		.priceBox{
