--- a/Practica2/templates/login.html
+++ b/Practica2/templates/login.html
@@ -10,7 +10,7 @@
 
           <div class="TextTextbox">
             <h4>User Name:</h4>
-            <input class="regTextbox" type="text" name="name" value={{ name or '' }}>
+            <input class="regTextbox" type="text" name="name" value={{ username or '' }}>
           </div>
 
           <div class="TextTextbox">
