--- a/Practica2/templates/index.html
+++ b/Practica2/templates/index.html
@@ -5,7 +5,7 @@
       <link rel=StyleSheet href={{ url_for('static', filename='css/styles.css') }} >
       <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <title>CDdede</title>
     </head>
     <body>
