--- a/Practica2/templates/index.html
+++ b/Practica2/templates/index.html
@@ -11,7 +11,7 @@
     <body>
 
       <header class="header fixed">
-        <a href="/">
+        <a href="/" class="title_div">
           <h1 class="title">CDdede</h1>
           <p id="numLoggedUsers"></p>
         </a>
