--- a/Practica2/templates/register.html
+++ b/Practica2/templates/register.html
@@ -154,31 +154,25 @@
 	
 	function passwordStrength() {
 		var password = document.getElementById('password');
-		var meter = document.getElementById('meter-value');
 		var val = password.value;
 		var result = zxcvbn(val);
 
 		/* Update the password strength meter */
 		switch (result.score){
 			case 0:
-				console.log("Clase 0");
-				meter.className = "meter-value-0";
+				$("#meter-value").attr('class', 'meter-value-0');
 				break;
 			case 1:
-				console.log("Clase 1");
-				meter.className = "meter-value-1";
+				$("#meter-value").attr('class', 'meter-value-1');
 				break;
 			case 2:
-				console.log("Clase 2");
-				meter.className = "meter-value-2";
+				$("#meter-value").attr('class', 'meter-value-2');
 				break;
 			case 3:
-				console.log("Clase 3");
-				meter.className = "meter-value-3";
+				$("#meter-value").attr('class', 'meter-value-3');
 				break;
 			case 4:
-				console.log("Clase 4");
-				meter.className = "meter-value-4";
+				$("#meter-value").attr('class', 'meter-value-4');
 				break;
 		}
 
