Finish login and register

--- a/Practica3/app/templates/login.html
+++ b/Practica3/app/templates/login.html
@@ -9,8 +9,8 @@
         <div class="verContainer">
 
           <div class="TextTextbox">
-            <h4>User Name:</h4>
-            <input class="regTextbox" type="text" name="name" value={{ username or '' }}>
+            <h4>User email:</h4>
+            <input class="regTextbox" type="email" name="email" value={{ useremail or '' }}>
           </div>
 
           <div class="TextTextbox">
