Improve detail and images

--- a/Practica3/app/templates/detail.html
+++ b/Practica3/app/templates/detail.html
@@ -47,7 +47,10 @@
 
             <div class="verInfoContainer">
               <h4>Synopsis: </h4>
-              <h5>{{film['synopsis']}}</h5>
+              <h5>
+              	Sinopsis de la película. No está almacenada en la base de datos, por lo que añadimos texto aleatorio para rellenar el hueco.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </h5>
             </div>
 
             <div class="infoContainer">
