Fixes on detail.html

--- a/Practica3/app/templates/detail.html
+++ b/Practica3/app/templates/detail.html
@@ -20,18 +20,8 @@
           </div>
 
           <div class="infoContainer">
-            <h4>Duration: </h4>
-            <h5>{{film['duration']}}</h5>
-          </div>
-
-          <div class="infoContainer">
             <h4>Genre: </h4>
-            <h5>{{category['name']}}</h5>
-          </div>
-
-          <div class="infoContainer">
-            <h4>Language: </h4>
-            <h5>{{film['']}}</h5>
+            <h5>{{film['categories']}}</h5>
           </div>
 
           <div class="verInfoContainer">
